--- a/css/carola_site.css
+++ b/css/carola_site.css
@@ -1,9 +1,10 @@
  html {
  	box-shadow: inset 0 0 200px rgba(0,0,0,.5) !important;
- 	height: 100% !important;;
+ 	/*height: 100% !important;;*/
  }
 
  body{
+ 	position: static !important;
  	background-color: #334 !important;
  }
 
@@ -43,6 +44,16 @@
  #currentftp, #cantresult {
  	color: #eeeeee !important;
  }
+
+ .footer {
+ 
+  position: absolute !important;
+  bottom: 0 !important;
+  width: 100% !important;
+  /* Set the fixed height of the footer here */
+  height: 3em !important;
+  background-color: #f5f5f5 !important;
+}
 
 /*
  .carola-nav {
