--- a/css/carola_site_white.css
+++ b/css/carola_site_white.css
@@ -1,11 +1,14 @@
  html {
- 	box-shadow: inset 0 0 200px rgba(0,0,0,.5) !important;
+ 	/*box-shadow: inset 0 0 200px rgba(0.2,0.2,.8,.9) !important;*/
+
  	/*height: 100% !important;;*/
  }
 
  body{
+    height: 100% !important;
  	position: static !important;
- 	background-color: #334 !important;
+ 	background-color: #FFFFFF !important;
+
  }
 
  @font-face {
@@ -26,7 +29,7 @@
  #grafiti {
  	font-family: rufa !important;
  	font-size: 6em;
- 	color: #eeeeee;
+ 	color: #269abc;
  	position:relative;
  	letter-spacing: 0.07em !important;
  	left:-10px;
@@ -38,11 +41,11 @@
  #subtitle{
  	font-size: 1.4em !important;
  	padding: -5px;
- 	color: #6a6a7a !important;
+ 	color: #222222 !important;
  }
 
  #currentftp, #cantresult {
- 	color: #eeeeee !important;
+ 	color: #444444 !important;
  }
 
  .footer {
