--- a/css/carola_site_black.css
+++ b/css/carola_site_black.css
@@ -1,63 +1,44 @@
  html {
  	box-shadow: inset 0 0 200px rgba(0,0,0,.5) !important;
 
- 	/*height: 100% !important;;*/
  }
 
  body{
- 	position: static !important;
+
  	background-color: #334 !important;
-    height: 100% !important;
+
  }
 
- @font-face {
-	 font-family: 'bubble';
-	 src: url('../media/ttf/bubble.ttf');
+ #carola-nav {
+     background-color: #35444e !important;
+     opacity: 0.6;
  }
-
- @font-face {
-	 font-family: 'block';
-	 src: url('../media/ttf/block.ttf');
- }
-
-  @font-face {
- 	 font-family: 'rufa';
- 	 src: url('../media/ttf/rufa.ttf');
-  }
 
  #grafiti {
- 	font-family: rufa !important;
- 	font-size: 6em;
+
  	color: #eeeeee;
- 	position:relative;
- 	letter-spacing: 0.07em !important;
- 	left:-10px;
- 	padding: 0.02em !important;
- 	margin-left: 0.15em !important;
- 	z-index: -1 !important;
+
  }
 
  #subtitle{
- 	font-size: 1.4em !important;
- 	padding: -5px;
- 	color: #6a6a7a !important;
+     text-align: right !important;
+     border-top-style: dotted;
+     border-top-width: 5px !important;
+     border-top-color: #d0e3f0  !important;;
+     -moz-border-top-width: 5px !important;
+     -moz-border-top-color: #d0e3f0  !important;;
+     color: #d0e3f0 !important;
  }
 
  #currentftp, #cantresult {
  	color: #eeeeee !important;
  }
 
- .footer {
- 
-  position: absolute !important;
-  bottom: 0 !important;
-  width: 100% !important;
-  /* Set the fixed height of the footer here */
-  height: 3em !important;
-  background-color: #f5f5f5 !important;
-}
+ #carola-nav .dropdown-menu > li > a {
+     color: rgb(255, 52, 101) !important;
+ }
 
-/*
- .carola-nav {
- 	
- }*/
+ #carola-nav {
+     background-color: #000000;
+
+ }
