.xml of phpStorm re-added

--- a/css/carola_site_white.css
+++ b/css/carola_site_white.css
@@ -38,6 +38,10 @@
  	z-index: -1 !important;
  }
 
+ ul.typeahead {
+     overflow: hidden !important;
+ }
+
  #subtitle{
  	font-size: 1.4em !important;
  	padding: -5px;
