--- a/css/carola_site_black.css
+++ b/css/carola_site_black.css
@@ -1,44 +1,71 @@
- html {
- 	box-shadow: inset 0 0 200px rgba(0,0,0,.5) !important;
+html {
+    box-shadow: inset 0 0 200px rgba(0,0,0,.5) !important;
 
- }
+}
 
- body{
+body{
 
- 	background-color: #334 !important;
+    background-color: #334 !important;
 
- }
+}
 
- #carola-nav {
-     background-color: #35444e !important;
-     opacity: 0.6;
- }
+#carola-nav {
+    background-color: #000000;
+    /*background-color: #2B2B39 !important;*/
 
- #grafiti {
+}
 
- 	color: #eeeeee;
+#grafiti {
 
- }
+    color: #eeeeee;
 
- #subtitle{
-     text-align: right !important;
-     border-top-style: dotted;
-     border-top-width: 5px !important;
-     border-top-color: #d0e3f0  !important;;
-     -moz-border-top-width: 5px !important;
-     -moz-border-top-color: #d0e3f0  !important;;
-     color: #d0e3f0 !important;
- }
+}
 
- #currentftp, #cantresult {
- 	color: #eeeeee !important;
- }
+#subtitle{
+    text-align: right !important;
+    border-top-style: dotted;
+    /*-moz-border-top-image: lineal-gradient(45deg, #d72b32 0%, rgba(0, 82, 255, 0.2150) 80%) !important;*/
+    border-top-width: 5px !important;
+    border-top-color: #d0e3f0  !important;;
+    -moz-border-top-width: 5px !important;
+    /*-moz-border-top-color: #d0e3f0  !important;;*/
+    color: #d0e3f0 !important;
+}
 
- #carola-nav .dropdown-menu > li > a {
-     color: rgb(255, 52, 101) !important;
- }
+#currentftp, #cantresult {
+    color: #eeeeee !important;
+}
 
- #carola-nav {
-     background-color: #000000;
+#carola-nav > ul > li > a {
+    color: #FFFFFF;
+}
 
- }
+#carola-nav > ul > li > a:hover {
+    color: #2B2B39 !important;
+}
+
+#carola-nav > ul > li.open > a:hover {
+    color: #ffffff !important;
+}
+
+#carola-nav > ul > li.open  ul > li > a:hover {
+    color: #f0ad4e !important;
+    background-color: #101010 !important;
+}
+/*#carola-nav > ul  {*/
+    /*opacity: 0.6;*/
+/*}*/
+
+/*#carola-nav > ul > li > a:focus {*/
+    /*background-color: #2B2B39;*/
+/*}*/
+
+#carola-nav > ul > li.open > a {
+    background-color: #2B2B39;
+}
+
+
+
+#carola-nav .dropdown-menu > li > a {
+    color: rgb(255, 52, 101) !important;
+}
