--- a/css/carola_site_black.css
+++ b/css/carola_site_black.css
@@ -1,5 +1,5 @@
 /*html{*/
-    /*height: 100% !important;*/
+    /*height: 100%;*/
 /*}*/
 
 
@@ -7,7 +7,7 @@
 body{
     background-color: #334 !important;
     box-shadow: inset 0 0 200px rgba(0,0,0,.5) !important;
-    height: 100% !important;
+    height: 100%;
 }
 
 #carola-nav {
