--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Carola</title>
+        <title>{% block title 'Bienvenido a Carola' %}</title>
+        
+        <!-- stylesheets -->
+        <link href="{{ app.request.basepath }}/css/bootstrap.css" rel="stylesheet">
+        <link href="{{ app.request.basepath }}/css/docs.css" rel="stylesheet">
+        <link href="{{ app.request.basepath }}/css/carola_site.css" rel="stylesheet">
+        <link href="{{ app.request.basepath }}/css/carola_site_{{ app.session.get('style') }}.css" rel="stylesheet">
 
-        <link href="{{ app.request.basepath }}/css/main.css" rel="stylesheet" type="text/css" />
+        <!-- jscripts -->
+        <script src="{{ app.request.basepath }}/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ app.request.basepath }}/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ app.request.basepath }}/js/alert.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ app.request.basepath }}/js/bootstrap-typeahead.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ app.request.basepath }}/js/mystorage.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ app.request.basepath }}/js/scrollspy.js" type="text/javascript" charset="utf-8"></script>
+
+
     </head>
     <body>
-        {% block content %}{% endblock %}
+
+        <!-- barra de navegación -->
+        {% include 'navbar.html' %}
+
+        <!-- bloque de contenido principal -->
+        <div class="container bs-docs-container" id="contenido">
+            <div id="carola-search-box" class="carola-search-box-center">
+                <div id="logo">
+                    <div id="grafiti">
+                        CAROLA
+                    </div>
+                    <div id="subtitle">FTP INDEXER</div>
+                </div>
+                
+                <!-- formulario de búsqueda -->
+                <form id="carola-form" class="form-inline" action="search.php" method="get" >
+                    <div class="form-group">
+                        <input class="typeahead-suggestion typeahead form-control" type="search" name="searchedtext" placeholder="Escriba aqui el texto que desea buscar"
+                               data-provide="typeahead" data-items="10"
+                               value="{% if(app.request.query.has('searchedtext')) %} {{ app.request.query.get('searchedtext') }} {% endif %}" required="true">
+                    </div><div class="form-group">
+                        &nbsp;<button type="submit" class="btn btn-primary"><img src="{{ app.request.basepath }}/img/search2.png"> Buscar</button>
+                    </div>
+                </form>
+            
+            </div>
+
+        {% block content %}
+
+        {% endblock %}
+        </div>
+
+
+        <footer class="footer" id="colophon" role="contentinfo">
+            <a href="ftp.php" id="administrar" class="pull-left" target="_blank">Administrar</a>
+            <a href="http://192.168.32.1/netlab/" id="copyright" class="pull-right" target="_blank">Thanks to netlab</a>
+        </footer>
     </body>
 </html>
