--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
         <script src="{{ app.request.basepath }}/js/mystorage.js" type="text/javascript" charset="utf-8"></script>
         <script src="{{ app.request.basepath }}/js/scrollspy.js" type="text/javascript" charset="utf-8"></script>
 
-
+        {% block jscripts %}{% endblock %}
     </head>
     <body>
 
@@ -35,21 +35,21 @@
                 </div>
                 
                 <!-- formulario de búsqueda -->
-                <form id="carola-form" class="form-inline" action="search.php" method="get" >
+                <form id="carola-form" class="form-inline" action="{{ path('search') }}" method="get" >
                     <div class="form-group">
                         <input class="typeahead-suggestion typeahead form-control" type="search" name="searchedtext" placeholder="Escriba aqui el texto que desea buscar"
                                data-provide="typeahead" data-items="10"
-                               value="{% if(app.request.query.has('searchedtext')) %} {{ app.request.query.get('searchedtext') }} {% endif %}" required="true">
+                               value="{% if(app.request.query.has('searchedtext')) %} {{ app.request.query.get('searchedtext') }} {% endif %}" required>
                     </div><div class="form-group">
                         &nbsp;<button type="submit" class="btn btn-primary"><img src="{{ app.request.basepath }}/img/search2.png"> Buscar</button>
                     </div>
                 </form>
-            
-            </div>
 
         {% block content %}
-
+            
         {% endblock %}
+        
+            </div>
         </div>
 
 
