--- a/web/css/carola_site_black.css
+++ b/web/css/carola_site_black.css
@@ -20,8 +20,8 @@ body{
 
 @font-face {
     font-family: 'kosalsay';
-    src:    url('fonts/opensans_light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('fonts/kosalsay.ttf') format('truetype')
+    src:    url('../fonts/opensans_light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/kosalsay.ttf') format('truetype')
 
 ;
 }
@@ -98,20 +98,8 @@ body{
 .text-info {
     color: rgba(84, 195, 255, 1) !important;
 }
-
-
-.panel {
-    background-color: transparent !important;
-    border: 1px solid #eeeeee !important;
-    border-left: 0px !important;
-    border-top-left-radius: 0px !important;
-}
-
-
-.panel .panel-body {
-    padding: 0px !important;
-    background-color: transparent !important;
-
+.panel{
+    background-color: transparent;
 }
 .list-group-item{
     color: #f5f5f5 !important;
@@ -123,7 +111,7 @@ body{
 }
 
 .list-group-item:last-child, .list-group-item:first-child {
-    border-radius: 0px !important;
+    /*border-radius: 0px !important;*/
 }
 
 .list-group-item:hover{
