--- a/web/css/carola_site.css
+++ b/web/css/carola_site.css
@@ -195,5 +195,5 @@ td#download-explore > a {
 }
 
 #paginator-containter {
-    margin-right: -0.87em !important;
+    margin-right: 10px !important;
 }
