Trabajando en el backend.

--- a/templates/results.html
+++ b/templates/results.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% block title 'Se han encontrado resultados' %}
+{% block title %}{{ 'Se han encontrado ' ~ total ~ ' resultados' }}{% endblock %}
 {% block jscripts %}
 	<script>
 			 
@@ -21,7 +21,7 @@
 		{% if app.request.query.get('searchedtext') | length < 3 and not app.request.query.has('style')  %}
 			<div class="alert alert-danger fade in alert-dismissable">
 				<button class="close" aria-hidden="true" data-dismiss="alert" type="button">&times;</button><h4 id="infoalerttitle">Error</h4>
-				<p id="infoalerttext">No se admiten cadenas de menos de 3 caracteres para la busqueda.</p>
+				<p id="infoalerttext">No se admiten cadenas de menos de 3 caracteres para la búsqueda.</p>
 			</div>
 		{% endif %}
 
