--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,7 +59,7 @@
 
 
         <footer class="footer" id="colophon" role="contentinfo">
-            <a href="ftp.php" id="administrar" class="pull-left" target="_blank">Administrar</a>
+            <a href="{{ path('admin')}}" id="administrar" class="pull-left" target="_self">Administrar</a>
             <a href="http://192.168.32.1/netlab/" id="copyright" class="pull-right" target="_blank">Thanks to netlab</a>
         </footer>
     </body>
