--- a/templates/backend/layout.html
+++ b/templates/backend/layout.html
@@ -48,11 +48,11 @@
 			{% block content %}
 			
 			{% endblock %}	
-			
+
 		</div>	
 	</div>	
 	<!-- Incluir las divisiones modales -->
-	{% include 'backend/insert.html' %}
+	{% include 'backend/form.html' %}
 	{% include 'backend/delete.html' %}
 </body>
 </html>
