--- a/templates/backend/form.html
+++ b/templates/backend/form.html
@@ -4,7 +4,7 @@
     	<form action="{{ path('insert') }}" method="post">
       		<div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		        <h4 class="modal-title" id="myModalLabel">Agregar un nuevo FTP a la lista del indizador.</h4>
+		        <h4 class="modal-title" id="myModalLabel">Agregar un nuevo FTP a la lista del indexador.</h4>
       		</div>
 			<div class="form-horizontal" style="margin-top:10px">
 			<input type="hidden" id="action">
@@ -44,6 +44,9 @@
 					<div class="col-sm-3">
 						{{ form_widget(form.pass, { 'attr' : { ' class' : 'form-control', 'required' : true, 'placeholder' : 'Contraseña' }}) }}
 					</div>
+				</div>
+				<div class="form-group">
+					<input type="checkbox" name="anonimo"><label class="col-sm-3 control-label" for="anonimo">Anónimo</label>
 				</div>
 			</div>
 		      <div class="modal-footer">
