Terminada funcionalidad para editar los datos de los ftps.

--- a/templates/backend/delete.html
+++ b/templates/backend/delete.html
@@ -1,7 +1,7 @@
 <div class="modal fade" id="deleteform" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content" id="insertdialogcontent">
-    	<form action="{{ path('ftp_delete') }}" method="post">
+    	<form action="{{ path('delete') }}" method="post">
 		    <div class="modal-header">
 		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 		    <h4 class="modal-title" id="myModalLabel1">Eliminar FTP.</h4>
