Corrigiendo faltas de ortografía.

--- a/templates/backend/form.html
+++ b/templates/backend/form.html
@@ -9,7 +9,7 @@
 			<div class="form-horizontal" style="margin-top:10px">
 				<div class="form-group">
 					<label class="col-sm-3 control-label" for="descripcion">
-						Descripcion
+						Descripción
 					</label>
 					<div class="col-sm-8">
 						{{ form_widget(form.descripcion, { 'attr' : { ' class' : 'form-control', 'required' : true, 'placeholder' : 'Descripción del ftp' }}) }}
@@ -17,7 +17,7 @@
 				</div>
 				<div class="form-group">
 					<label class="col-sm-3 control-label" for="dirip">
-						Direccion
+						Dirección
 					</label>
 					<div class="col-sm-4">
 						{{ form_widget(form.direccion_ip, { 'attr' : { ' class' : 'form-control', 'required' : true, 'placeholder' : 'Dirección IP' }}) }}
