--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="es">
     <head>
+        <meta charset="UTF-8">
         <title>{% block title 'Bienvenido a Carola' %}</title>
         
         <!-- stylesheets -->
